Allow attach profiler